--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./bookig.html">Booking</a></li>
+                    <li><a href="./booking.html">Booking</a></li>
                     <h3 id="logo"><img src="./image/Coffee Shop logo (1)2.png" alt=""></h3>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./contact.html">Contact</a></li>
