--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
-                <li><a href="./bookig.html">Booking</a></li>
+                <li><a href="./booking.html">Booking</a></li>
                 <h3 id="logo"><img src="./image/Coffee Shop logo (1)2.png" alt=""></h3>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
